cli/tests/snapshot/inputs/errors/array_range_step_negative_step.ncl
# capture = 'stderr'
# command = ['eval']
std.array.range_step 0 10 (-1)
